--- a/src/Style/SingleToDo.css
+++ b/src/Style/SingleToDo.css
@@ -7,6 +7,12 @@
   background-image: url("../Public/Images/YellowBackground.png");
   transition: 0.2s;
 }
+
+.toDos__single:hover {
+  box-shadow: 0 0 5px #000;
+  transform: scale(1.03);
+}
+
 .toDos__single--text {
   flex: 1;
   padding: 5px;
