--- a/src/Style/ToDoList.css
+++ b/src/Style/ToDoList.css
@@ -1,8 +1,26 @@
-.todos {
+.container {
   display: flex;
-  justify-content: space-evenly;
-  width: 90%;
-  flex-wrap: wrap;
+  width: 95%;
+  margin-top: 10px;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+.toDos {
+  display: flex;
+  width: 47.5%;
+  flex-direction: column;
+  padding: 15px;
+  border-radius: 5px;
+  background-color: rgb(50, 195, 205);
+}
+
+.toDos__heading {
+  font-size: 30px;
+  color: #fff;
+}
+
+.remove {
+  background-color: rgb(235, 103, 80);
 }
 
 @media (max-width: 700px) {
